# veterinary-clinic

./: .gitignore  README.md  db.sqlite3  manage.py  profiles.json  pyproject.toml
vetclinic/: admin.py  admin_dashboard.py  apps.py  dashboards.py  forms.py  models.py  signals.py  urls.py  views.py
vetclinic/migrations/: 0001_initial.py  create_castom_users4test.py
vetclinic/static/admin/js/: set_default_action.js
vetclinic/static/vetclinic/: slider1.avif  slider2.avif  slider3.avif  styles.css
vetclinic/static/vetclinic/avatars/: avatar5.avif
vetclinic/templates/admin/: custom_index.html
vetclinic/templates/vetclinic/: about.html  appointment.html  benefits_section.html  cart.html  footer.html  homePage.html  location.html  navbar.html  reviews.html  shop.html
veterinary_clinic/: asgi.py  settings.py  urls.py  wsgi.py
